--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = source/third-party/empirical
   url = https://github.com/FergusonAJ/Empirical
   branch = virtual_cpu_merge
+[submodule "source/third-party/SignalGP"]
+	path = source/third-party/SignalGP
+	url = https://github.com/amlalejini/SignalGP.git
