--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [master, auto_testing, waves_tests, avida, avida_merge]
+    branches: [master, fast_tests]
   pull_request:
-    branches: [master, auto_testing]
+    branches: [master]
 
 jobs:
   unit-tests-debug:
